<resources>
    <string name="app_name">R Chat</string>
    <string name="Message_Input_Hint">Введите сообщение…</string>
    <string name="firsttime_in_rchat_title">Впервые в R Chat?</string>
    <string name="enter_email_title">Введите e-mail</string>
    <string name="enter_password_title">Введите пароль</string>
    <string name="finish_registration_title">Завершить регистрацию</string>
    <string name="enter_login_title">Введите логин</string>
    <string name="already_have_acc_title">У меня уже есть аккаунт</string>
    <string name="repeat_password_title">Повторите пароль</string>
    <string name="welcome_back_title">Авторизация</string>
    <string name="enter_acc_title">Войти в аккаунт</string>
    <string name="dont_have_acc_title">У меня нет аккаунта</string>
    <string name="forgot_password_title">Забыли пароль?</string>
    <string name="user_name_text">Имя пользователя</string>
    <string name="toptext_settings_title">Настройки</string>
    <string name="dark_theme_title">Темная тема</string>
    <string name="login_text_title">Логин</string>
    <string name="phonenumber_title">Введите номер телефона</string>
    <string name="user_login_title">Введите логин пользователя…</string>
    <string name="exit_acc_title">Выйти из аккаунта</string>
    <string name="new_chat_title">Новый чат</string>
    <string name="settings_title">Настройки</string>
    <string name="delete_chat_title">Удалить чат</string>
    <string name="delete_message_title">Удалить сообщение</string>
    <string name="edit_message_title">Редактировать сообщение</string>
    <string name="reply_message_title">Ответить</string>
    <string name="create_conf_title">Создать беседу</string>
    <string name="enter_group_name_title">Введите имя беседы</string>
    <string name="night_theme_title">Ночная тема</string>
    <string name="light_title">Светлая</string>
    <string name="dark_title">Темная</string>
    <string name="system_title">Системная</string>
    <string name="wip_title">В разработке…</string>
    <string name="no_chats_title">Тут пока ничего нет…</string>
    <string name="you_title">Вы:</string>
    <string name="welcome_rchat_title">Добро пожаловать в R Chat!</string>
    <string name="hello_title">Здравствуйте,</string>
    <string name="attention_title">Внимание</string>
    <string name="really_wanna_exit_app_title">Вы действительно хотите выйти?</string>
    <string name="yes_title">Да</string>
    <string name="no_title">Нет</string>
    <string name="app_running_in_background_title">Приложение запущено в фоне</string>
    <string name="ok_title">Ок</string>
    <string name="really_wanna_exit_account_title">Вы действительно хотите выйти из аккаунта?</string>
    <string name="change_avatar_title">Сменить аватар</string>
    <string name="new_group_chat_title">Новая беседа</string>
    <string name="create_title">Создать…</string>
    <string name="error_title">Ошибка</string>
    <string name="check_correct_title">Проверьте корректность введенных данных</string>
    <string name="error_of_connection_title">Ошибка установки соединения. Код:</string>
    <string name="error_of_sending_data_title">Ошибка отправки данных. Код:</string>
    <string name="error_of_receiving_data_title">Ошибка получения данных. Код:</string>
    <string name="users_not_found_title">Пользователи не найдены</string>
    <string name="nothing_was_input_title">Ничего не было введено</string>
    <string name="check_data_and_passwords_title">Внимательно проверьте корректность введенных данных, а также совпали ли пароли</string>
    <string name="error_exit_acc_title">Ошибка выхода из аккаунта. Код:</string>
    <string name="really_wanna_delete_chat_title">Вы действительно хотите удалить данный чат?</string>
    <string name="error_sending_message_title">Ошибка отправки сообщения. Код:</string>
    <string name="app_lang_title">Язык приложения</string>
    <string name="notif_off_title">Отключить уведомления</string>
    <string name="notifications_title">Уведомления</string>
    <string name="on_title">Вкл</string>
    <string name="off_title">Выкл</string>
    <string name="theres_nothing_here_title">Здесь пока ничего нет...</string>
    <string name="enter_email_for_sending_title">Введите e-mail для кода</string>
    <string name="send_email_title">Отправить e-mail</string>
    <string name="send_acceptance_code_title">Введите код подтверждения</string>
    <string name="send_code_title">Отправить код</string>
    <string name="enter_new_password_title">Введите новый пароль</string>
    <string name="repeat_new_password_title">Повторите новый пароль</string>
    <string name="save_password_title">Сохранить пароль</string>
    <string name="delete_for_myself_title">Удалить у себя</string>
    <string name="delete_for_all_title">Удалить у всех</string>
    <string-array name="lang_array">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
</resources>