<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Создание чата -->
    <item
        android:id="@+id/new_chat_options_item"
        android:icon="@drawable/ic_message"
        android:title="@string/create_title">
        <menu>
            <!-- Новый чат -->
            <item
                android:id="@+id/new_chat_item"
                android:title="@string/new_chat_title" />

            <!-- Новая беседа -->
            <item
                android:id="@+id/new_group_chat_item"
                android:title="@string/new_group_chat_title" />
        </menu>
    </item>

    <!-- Настройки -->
    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title" />
</menu>